<resources>
    <string name="app_name">Albanian Red Cross</string>
    <string name="welcome">Welcome!</string>
    <string name="logo">logo</string>
    <string name="imagemain">imagemain</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prepare">Prepare</string>
    <string name="learn">Learn</string>
    <string name="image">image</string>
    <string name="Donate">Donate</string>
    <string name="Volunteer">Volunteer</string>
    <string name="Programs">Programs</string>
    <string name="Activities">Activities</string>
    <string name="donationfirstp">Donating blood is a powerful act of giving hope and saving lives. It is essential to ask ourselves what we would want others to do if we were in need of blood.\n\nThe demand for blood is constant and often surpasses the available supply. In our country, around 30,000 units of blood are needed, while only about 20,000 units are collected. This scarcity affects not only accident victims and patients requiring surgery but also approximately 300 individuals with thalassemia who rely on regular blood transfusions.\n\nBlood is irreplaceable in emergency situations, and no medication can substitute for a transfusion when it becomes necessary. It is a precious resource that can only be sourced from human donors since it cannot be artificially produced. Remember, one day, we might all rely on the generosity of others to provide the life-saving gift of blood.</string>
    <string name="donationsecondp">- Group 0 is universal group and anyone can donate blood.\n- Group A can donate blood to group A and AB.\n- Group B can donate blood to group B and AB.\n- Group AB can only donate blood to group AB, but can receive blood from other groups.\nIn the Rhesus system, two blood groups are distinguished: Rhesus positive (+ ) if the "D" antigen is present and Rhesus negative ( - ) if the "D" antigen is absent. Anyone who has one \n of the blood groups in the A, B, O system is either Rh (+) positive or Rh (–) negative.\n\nIn the Albanian population, the blood groups are in the \nfollowing percentages:\n\nGroup 0 – 40.1%; Group A – 36.7%; Group B – 17.1%; and Group AB – 6.1%. Rhezus positive people make up 85% of the population, while 15% of the population are Rhezus negative. </string>
    <string name="donationthirdp">In Tirana, blood donation is done at the KKTGJ in Laprakë,\nQSUT, maternity blood banks 1 and 2. In the districts, it is done at blood banks in hospitals.
Your blood is replaced quickly, but life is not! Register now!</string>
    <string name="volunteerfirst">Why Volunteer?</string>
    <string name="volunteersecond">\nBecause in this way you have the opportunity to: \n1. To become members of a worldwide Humanitarian Movement and a universal humanitarian mission!
\n2. To realize your natural aspirations against solidarity and humanity!
\n3. To contribute in this way to changing the lives of people in need and for a better future.
\n4. To have contact with different people and to be part of a social environment where you can \nenjoy the company of others and share your life experiences.
\n5. Increase your capacities or develop your communication skills through meetings, trainings \nand training courses that the Red Cross offers.
\n6. To ensure a better future for yourself through the training and work experience you gain at \nthe Albanian Red Cross, certificates or testimonies given for your participation in activities and trainings.</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="volunteer">Volunteer</string>
    <string name="todo">TODO</string>
    <string name="why_volunteer">Why Volunteer?</string>
    <string name="why_donate_blood">Why Donate Blood?</string>
    <string name="blood_groups">Blood Groups</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="programsfirst">Programs</string>
    <string name="buttonexample">Buttonexample</string>
    <string name="program">program</string>
    <string name="home">Home</string>
    <string name="Learn" />
    <string name="Home" />
    <string name="Emergency" />
    <string name="desciption">desciption</string>
    <string name="allergies">Allergies</string>
    <string name="allergiestexttwo">Managing allergies involves a combination of strategies. Firstly, it\'s important to identify and avoid allergens as much as possible. This may involve making changes in the environment, using air purifiers, and taking steps to minimize exposure. Medications like antihistamines, nasal sprays, and eye drops can help alleviate symptoms. In severe cases, allergen immunotherapy, or allergy shots, may be recommended to desensitize the immune system over time.</string>
    <string name="allergiestextthree">If you suspect you have allergies, it\'s best to seek medical advice. A healthcare professional or allergist can help diagnose your specific allergens and provide suitable management options. With proper management and precautions, individuals with allergies can reduce their symptoms and improve their quality of life.</string>
    <string name="allergiestextone">Allergies are a common condition where the immune system overreacts to harmless substances called allergens. These allergens can be found in things like pollen, dust mites, pet dander, certain foods, or insect stings. When exposed to an allergen, the immune system triggers a response that can lead to symptoms such as sneezing, itching, watery eyes, and skin rashes.</string>
    <string name="bites">Bites</string>
    <string name="bitesone">These bites typically occur when insects such as mosquitoes, fleas, ticks, or bedbugs feed on human blood. \n When a bug bites, it injects saliva into the skin, which can trigger a localized reaction. \n Common symptoms of bug bites include redness, itching, swelling, and sometimes pain at the site of the bite. \n While most bug bites are harmless and resolve on their own, some individuals may have allergic reactions that require medical attention. \n</string>
    <string name="bitestwo">To relieve the discomfort caused by bug bites, there are several home remedies and over-the-counter treatments available. \n Applying cold compresses or ice packs to the affected area can help reduce swelling and alleviate itching. \n Over-the-counter creams or ointments containing hydrocortisone or calamine lotion can also provide relief. \n Avoiding scratching the bites is important to prevent further irritation and potential infection. \n If symptoms worsen or persist, or if you experience severe reactions such as difficulty breathing or swelling of the face or throat, it is crucial to seek immediate medical attention. \n</string>
    <string name="bleeding">Bleeding</string>
    <string name="chocke">Choking</string>
    <string name="choke">Choking</string>
    <string name="bleedingone">Bleeding is a natural process that occurs when blood vessels are damaged or broken, allowing blood to escape from the body. \n There are various causes of bleeding, ranging from minor injuries to more serious medical conditions. \n Minor cuts and scrapes can result in superficial bleeding, which can be managed by applying gentle pressure to the wound with a clean cloth or bandage. \n Nosebleeds are another common type of bleeding, often caused by dry air, allergies, or injury. \n Applying pressure to the nostrils and leaning forward slightly can help stop the bleeding in most cases. \n</string>
    <string name="bleedingtwo">"However, some bleeding requires prompt medical attention. \n Significant or prolonged bleeding, uncontrolled bleeding, or bleeding accompanied by severe pain or other concerning symptoms should be evaluated by a healthcare professional. \n Internal bleeding, such as gastrointestinal bleeding or bleeding in the brain, can be life-threatening and requires immediate medical intervention. \n Certain medications, medical conditions, and clotting disorders can also increase the risk of abnormal or excessive bleeding. \n It's important to seek medical advice if you have any concerns about your bleeding symptoms or if they persist despite initial measures to control them. \n     "</string>
    <string name="chokingone">Choking is a life-threatening emergency when an object \n blocks the airway. Immediate intervention, like the Heimlich maneuver, \n is needed to restore normal breathing. Prevention through supervision \n and CPR training can help avoid choking incidents.</string>
    <string name="Earthquake">Earthquake</string>
    <string name="Earthquakeone">An earthquake is a natural disaster that occurs when the Earth\'s tectonic plates shift and release energy, causing the ground to shake. \n These tremors can vary in intensity, ranging from minor vibrations to catastrophic quakes that can cause widespread destruction. \n During an earthquake, buildings, infrastructure, and even the ground itself can be severely damaged, posing significant risks to human lives and communities. \n It is important to be prepared and have emergency plans in place to ensure the safety of oneself and others in the event of an earthquake. \n This includes knowing the safest spots to take cover, having emergency supplies, and staying informed about local seismic activity. \n Additionally, communities and governments play a crucial role in implementing building codes and infrastructure measures to mitigate the impact of earthquakes. \n</string>
    <string name="call_emergency_numbers">Call Emergency Numbers</string>
    <string name="info">Tap the number you want to directly \ncall the emergency number.</string>
    <string name="fire">Fire</string>
    <string name="fireone">Fire is a destructive force that can cause immense damage and pose significant risks to life and property. \n It is crucial to prioritize fire safety measures to prevent and respond to fires effectively. \n This includes installing smoke alarms, practicing fire drills, maintaining fire extinguishers, and having evacuation plans in place. \n In case of a fire, it is important to prioritize personal safety and evacuate immediately, following established escape routes. \n Contacting emergency services and avoiding the use of elevators are also important steps to take during a fire emergency. \n By being proactive and prepared, individuals and communities can minimize the impact of fires and protect themselves and their surroundings. \n</string>
    <string name="flood">Flood</string>
    <string name="floodone">Floods are natural disasters that occur when an area becomes overwhelmed with excessive water. \n Heavy rainfall, hurricanes, or the overflow of rivers and lakes can all contribute to flooding. \n Floods can cause significant damage to infrastructure, homes, and the environment, as well as pose risks to human lives. \n It is important to be prepared and take necessary precautions in flood-prone areas. \n This includes staying informed about weather forecasts, having an emergency kit with essential supplies, and knowing evacuation routes. \n During a flood, it is crucial to prioritize personal safety and avoid walking or driving through floodwaters. \n Seeking higher ground and following instructions from local authorities are key steps to take during a flood emergency. \n By being vigilant and taking preventive measures, individuals and communities can minimize the impact of floods and protect themselves from harm. \n</string>
    <string name="injuryy">Head Injury</string>
</resources>