<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="104dp"
            android:layout_height="94dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="56dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/croppedmainlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"

            android:text="@string/welcome"
            android:textSize="25sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView2"
            app:layout_constraintBottom_toBottomOf="@id/imageView2"
            android:textColor="#000000"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="91dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/mainimageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:visibility="invisible" />

        <ImageView
            android:id="@+id/mainimageView"
            android:layout_width="445dp"
            android:layout_height="272dp"
            android:contentDescription="@string/image"
            android:src="@drawable/hometabimage1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.318" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="307dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainimageView"
            tools:visibility="invisible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="623dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="207dp" />

        <ImageButton
            android:id="@+id/DonateButton"
            android:layout_width="157dp"
            android:layout_height="127dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/Donate"
            app:layout_constraintBottom_toTopOf="@id/ProgramsButton"
            app:layout_constraintEnd_toStartOf="@id/VolunteerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:src="@drawable/donation" />

        <ImageButton
            android:id="@+id/VolunteerButton"
            android:layout_width="157dp"
            android:layout_height="127dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/Volunteer"
            app:layout_constraintBottom_toTopOf="@id/ActivitiesButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/DonateButton"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:src="@drawable/volunteer" />

        <ImageButton
            android:id="@+id/ProgramsButton"
            android:layout_width="157dp"
            android:layout_height="127dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/Programs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ActivitiesButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/DonateButton"
            android:src="@drawable/programs" />

        <ImageButton
            android:id="@+id/ActivitiesButton"
            android:layout_width="157dp"
            android:layout_height="127dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/Activities"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ProgramsButton"
            app:layout_constraintTop_toBottomOf="@id/VolunteerButton"
            android:src="@drawable/activities" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="400dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:src="@drawable/imageviewerthree" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:src="@drawable/hometabimage1" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:src="@drawable/hometabimage3" />
        </LinearLayout>
    </HorizontalScrollView> -->


</FrameLayout>